# lingo_lift

./: .gitignore  Cargo.toml  LICENSE  LICENSE.txt  README.md  install.sh
src/: main.rs  text_processing.rs  translation.rs
