[package]
name = "lingo_lift"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.26", features = ["json"] }
serde_json = "1.0.114"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
cli-clipboard = "0.4.0"
